Fix apachesolr h3 on small device

--- a/src/css/dgu-drupal.less
+++ b/src/css/dgu-drupal.less
@@ -820,6 +820,10 @@ div.fivestar-widget-static .star span.off {
     background-size: 22px;
     padding-left: 46px;
     padding-top: 0;
+    @media(max-width: 767px) {
+      padding-top: 10px;
+      background-position-y: 11px;
+    }
   }
   .node-type-app              h3 { background-image: url('/assets/img/icon-app.png'); }
   .node-type-blog             h3 { background-image: url('/assets/img/icon-blog.png');            }
